# Chonky

./: .gitignore  BOI.py  Booger.py  Dockerfile  Processing.py  README.md  __init__.py  app.py  boi.py  booger.py  boogr.py  config.py  data.py  embedders.py  embeddings.py  enums.py  loaders.py  loca.py  minion.py  minions.py  mkdocs.yml  objects.inv  processing.py  processors.py  pyproject.toml  requirements-lock.txt  requirements.txt  sitemap.xml  startup.sh
.github/workflows/: build-push-chonky.yml
.streamlit/: config.toml
api/embedders/: index.html
architecture/: index.html
assets/css/: chonky.css
assets/js/: chonky.js
docs/: architecture.md  development.md  index.md
docs/api/: embedders.md  index.md  loaders.md  loca.md  processors.md
docs/reference/: api.md
docs/user-guide/: analysis.md  embeddings.md  index.md  loading.md  processing.md  tokenization.md  vector-database.md
github/workflows/: docs.yml
ipynb/: pipes.ipynb  tiggr.ipynb
models/bobo/: config.json
site/: 404.html  index.html  objects.inv  sitemap.xml
site/api/: index.html
site/api/app/: index.html
site/api/config/: index.html
site/api/embedders/: index.html
site/api/loaders/: index.html
site/api/loca/: index.html
site/api/processors/: index.html
site/architecture/: index.html
site/assets/css/: chonky.css
site/assets/js/: chonky.js
site/development/: index.html
site/reference/api/: index.html
site/search/: search_index.json
site/user-guide/: index.html
stores/sqlite/: data.db  data.sql
user-guide/: index.html
user-guide/loading/: index.html
(+6 files in other folders)
